[gd_scene load_steps=2 format=3 uid="uid://region_castle"]

[ext_resource type="Script" path="res://src/regions/region_castle.gd" id="1_script"]

[node name="RegionCastle" type="Node2D"]
script = ExtResource("1_script")

[node name="BgSprite" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(640, 360)
centered = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 140.0
offset_right = 80.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 32
text = "성"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroMessage" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -260.0
offset_top = 220.0
offset_right = 260.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.88, 0.86, 0.82, 1)
theme_override_font_sizes/font_size = 18
text = "성 안에는 상점과 휴식 공간이 있다."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ShopButton" type="Button" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 340.0
offset_right = 100.0
offset_bottom = 390.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "상점 가기"

[node name="InventoryButton" type="Button" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 400.0
offset_right = 100.0
offset_bottom = 450.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "가방"

[node name="BackButton" type="Button" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 470.0
offset_right = 100.0
offset_bottom = 520.0
grow_horizontal = 2
text = "돌아가기"
